src/test/deca/syntax/valid/created/parser/VariablesAndTypes/Cast.deca
// Description:
//  Cast d'un float en int.
{
    int b = (int) (1.0);
}