src/test/deca/syntax/invalid/created/FloatUnderflow.deca
// Description:
//    tests de programme incorrect syntaxiquement (valeur trop petite)
//
// Resultats:
//    ligne 7 : Erreur, Float Underflow
{
    float a = 0.4E-45;
}